--- a/index.html
+++ b/index.html
@@ -156,8 +156,11 @@
         </div>
     </footer>
     <div class="nyepile">
-    <a href="#toppen" class="ny-top"><img src="images/ny-top.png" alt="til toppen knap"></a>
+    <a href="#toppen" class="ny-top"><img src="images/ny-top.png" alt="til toppen knap">
+    <p class="toptxt">TOP</p>
+    </a>
     </div>
+    <p class="bundtxt">BUND</p>
     <div class="nyepile"><a href="#tider" class="ny-bund"><img src="images/ny-bund.png" alt="til toppen knap"></a>
     </div>
     
