--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </header>
     <div class="bodygrid">
-        <section class="content">
+        <section class="content toppen">
 
             <h1>Om os</h1>
             <div class="column omos">
